--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,1 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* style.css */
+header {
+    height: 100px; 
+    line-height: 100px; 
+}
+
+header .navbar-brand img {
+    max-height: 100px; 
+}
+
+.navbar-nav .nav-link {
+    padding-top: 0;
+    padding-bottom: 0;
+}
