--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
 
 /* style.css */
 header {
@@ -26,7 +27,10 @@ header .navbar-brand img {
 }
 
 body {
-    background: url('assests/images/italy-image-1.jpg')
+    background-image: url('/assests/images/italy-image-1.jpg');
+    background-size: cover;
+    opacity: 0.7;
+    z-index: -1;
 }
 
 #hero h1 {
@@ -38,7 +42,8 @@ body {
 
 #menu ul {
     list-style-type: none; 
-    padding: 0;            
+    padding: 0;      
+        
 }
 
 #menu ul li {
@@ -85,6 +90,13 @@ body {
 
 /* Media Queries for Tablets and Smaller Devices */
 @media (max-width: 768px) {
+    header .navbar-brand img {
+        max-height: 100px; /* Smaller size for tablets */
+    }
+    header .navbar-toggler {
+        margin-right: 15px; /* Adjust this value to mirror the logo's padding */
+    }
+    
     body {
         font-size: 0.9rem;
     }
