--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* style.css */
 header {
@@ -27,10 +27,9 @@ header .navbar-brand img {
 }
 
 body {
-    background-image: url('/assests/images/italy-image-1.jpg');
+    
     background-size: cover;
-    opacity: 0.7;
-    z-index: -1;
+    
 }
 
 #hero h1 {
@@ -43,7 +42,7 @@ body {
 #menu ul {
     list-style-type: none; 
     padding: 0;      
-        
+    
 }
 
 #menu ul li {
