--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* style.css */
@@ -16,6 +16,35 @@ header .navbar-brand img {
     padding-bottom: 0;
     font-size: 1.2rem;
 }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .navbar-toggler {
+    display: none; /* Hidden by default */
+    cursor: pointer;
+  }
+  
+  .navbar-menu {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .navbar-toggler {
+    display: block; /* Show the toggle button */
+  }
+  
+  .navbar-menu {
+    display: none; /* Hide the menu by default */
+    flex-direction: column;
+  }
+  
+  .navbar-menu.active {
+    display: flex; /* Show the menu when active */
+  }
 
 /* Hero Section */
 #hero {
@@ -42,14 +71,15 @@ body {
 #menu ul {
     list-style-type: none; 
     padding: 0;      
-    
+    font-family:'Playwright Cuba', sans-serif;
 }
 
 #menu ul li {
     padding-top: 10px;
     margin-bottom: 10px; 
     font-size: 1.1rem;   
-    line-height: 1.4;    
+    line-height: 1.4;  
+    font-family:'Playwright Cuba', sans-serif;  
 }
 
 /* Media Queries for Tablets and Smaller Devices */
