corrected spelling of assets folder and path

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,5 +192,9 @@ body {
     .social-links a {
         font-size: 1.2rem;
     }
+
+    .hero-text {
+        font-size: 15px; /* Adjust size as needed */
+      }
 }
 
