--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100;300;400;500;700;900&display=swap');
 
 /* style.css */
 header {
@@ -21,30 +20,26 @@ header .navbar-brand img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .navbar-toggler {
+}
+
+.navbar-toggler {
     display: none; /* Hidden by default */
     cursor: pointer;
-  }
-  
-  .navbar-menu {
+}
+
+.navbar-menu {
     display: flex;
     flex-direction: row;
-  }
+}
 
-  .navbar-toggler {
+.navbar-toggler.active {
     display: block; /* Show the toggle button */
-  }
-  
-  .navbar-menu {
-    display: none; /* Hide the menu by default */
-    flex-direction: column;
-  }
-  
-  .navbar-menu.active {
+}
+
+.navbar-menu.active {
     display: flex; /* Show the menu when active */
-  }
+    flex-direction: column;
+}
 
 /* Hero Section */
 #hero {
@@ -56,9 +51,7 @@ header .navbar-brand img {
 }
 
 body {
-    
     background-size: cover;
-    
 }
 
 #hero h1 {
@@ -71,7 +64,7 @@ body {
 #menu ul {
     list-style-type: none; 
     padding: 0;      
-    font-family:'Playwright Cuba', sans-serif;
+    font-family: 'Playwrite CU', sans-serif;
 }
 
 #menu ul li {
@@ -79,7 +72,6 @@ body {
     margin-bottom: 10px; 
     font-size: 1.1rem;   
     line-height: 1.4;  
-    font-family:'Playwright Cuba', sans-serif;  
 }
 
 /* Media Queries for Tablets and Smaller Devices */
@@ -90,14 +82,20 @@ body {
 
     h1 {
         font-size: 2rem;
+        padding-top: 40px;
+        
     }
 
     h2 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1.1rem;
     }
 
     h3 {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
     }
 
     .navbar-brand img {
@@ -108,50 +106,12 @@ body {
         font-size: 1rem;
     }
 
-    #hero {
-        padding: 50px 0;
-    }
-
-    .container {
-        padding: 0 20px;
-    }
-}
-
-/* Media Queries for Tablets and Smaller Devices */
-@media (max-width: 768px) {
-    header .navbar-brand img {
-        max-height: 100px; /* Smaller size for tablets */
-    }
-    header .navbar-toggler {
-        margin-right: 15px; /* Adjust this value to mirror the logo's padding */
-    }
-    
-    body {
-        font-size: 0.9rem;
-    }
-
-    h1 {
-        font-size: 2rem;
-    }
-
-    h2 {
-        font-size: 1.8rem;
-    }
-
-    h3 {
-        font-size: 1.4rem;
-    }
-
-    .navbar-brand img {
-        max-height: 100px;
-    }
-
-    .navbar-nav .nav-link {
-        font-size: 1rem;
+    .navbar-toggler {
+        display: none;
     }
 
     #hero {
-        padding: 50px 0;
+        padding: 100px 0;
     }
 
     .container {
@@ -166,7 +126,7 @@ body {
     }
 
     h1 {
-        font-size: 1.5rem;
+        font-size: 30px;
     }
 
     h2 {
@@ -185,6 +145,10 @@ body {
         font-size: 0.9rem;
     }
 
+    .navbar-toggler {
+        display: block;
+    }
+
     #hero {
         padding: 30px 0;
     }
@@ -192,9 +156,4 @@ body {
     .social-links a {
         font-size: 1.2rem;
     }
-
-    .hero-text {
-        font-size: 15px; /* Adjust size as needed */
-      }
 }
-
